--- a/frontend/lost-found/.gitignore
+++ b/frontend/lost-found/.gitignore
@@ -5,7 +5,10 @@
 /.pnp
 .pnp.js
 
-# testing
+# Intellij IDEA
+.idea
+
+# testingg
 /coverage
 
 # production
@@ -21,3 +24,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
