--- a/backend/src/main/resources/application-cas.properties
+++ b/backend/src/main/resources/application-cas.properties
@@ -1,5 +1,4 @@
 cas.server-url-prefix=https://cas.finki.ukim.mk/cas
 #cas.client-host-url=https://raspredelba.finki.ukim.mk/login/cas
-cas.client-host-url=localhost:8084/login/cas 
-
+cas.client-host-url=https://localhost:8080/login/cas
 #TODO
