--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -36,6 +36,16 @@
 			<artifactId>spring-security-cas</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.socket</groupId>
+			<artifactId>socket.io-server</artifactId>
+			<version>1.0.0</version> <!-- Check for the latest version -->
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
